[package]
name = "http-server"
version = "0.9.0"
authors = ["Damjan Georgievski <gdamjan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gdamjan/http-server-rs"
edition = "2018"

[dependencies]
actix-web = "1.0.0-beta.5"
actix-rt = "0.2"
actix-files = "0.1.0-beta.4"
bytes = "0.4"
clap = "2"
env_logger = "0.6"
log = "0.4"
futures = "0.1"
tar = "0.4"
percent-encoding = "1.0"
htmlescape = "0.3"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
